--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react": "^16.5.0",
         "react-apollo": "^2.2.4",
         "react-dom": "^16.5.0",
+        "react-phone-number-input": "^2.2.16",
         "react-router-dom": "^4.3.1",
         "react-yandex-maps": "^3.0.2",
         "yandex-map-react": "^1.1.1"
