--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "license": "MIT",
     "devDependencies": {
         "cross-env": "^5.2.0",
+        "gh-pages": "^2.0.1",
         "react-hot-loader": "^4.3.4",
         "react-scripts": "^1.1.4"
     },
@@ -23,15 +24,9 @@
         "@vkontakte/vkui": "^2.13.0",
         "@vkontakte/vkui-connect": "^1.1.2",
         "@vkontakte/vkui-connect-mock": "^1.0.5",
-        "apollo-boost": "^0.1.20",
-        "apollo-client-preset": "^1.0.8",
-        "bootstrap": "^4.1.3",
         "core-js": "^2.5.7",
-        "graphql": "^14.0.2",
-        "graphql-tag": "^2.10.0",
         "prop-types": "^15.6.2",
         "react": "^16.6.1",
-        "react-apollo": "^2.2.4",
         "react-dom": "^16.6.1",
         "react-phone-number-input": "^2.2.16",
         "react-router-dom": "^4.3.1",
