--- a/package.json
+++ b/package.json
@@ -1,33 +1,44 @@
 {
     "name": "DonorA3V",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "description": "",
     "main": "index.js",
     "homepage": "https://arcanrun.github.io/DonorA3V/",
-    "scripts": {
-        "start": "cross-env PORT=10888 react-scripts start",
-        "build": "react-scripts build",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "MIT",
-    "devDependencies": {
-        "cross-env": "^5.2.0",
-        "react-hot-loader": "^4.3.4",
-        "react-scripts": "^1.1.4"
-    },
     "dependencies": {
         "@vkontakte/icons": "^1.2.1",
         "@vkontakte/vkui": "^2.13.0",
         "@vkontakte/vkui-connect": "^1.1.2",
         "@vkontakte/vkui-connect-mock": "^1.0.5",
-        "core-js": "^2.5.7",
-        "prop-types": "^15.6.2",
+        "gh-pages": "^1.2.0",
+        "history": "^4.7.2",
+        "lodash": "^4.17.10",
         "react": "^16.6.1",
         "react-dom": "^16.6.1",
+        "react-redux": "^5.0.7",
+        "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
+        "react-router-redux": "^5.0.0-alpha.9",
+        "react-scripts": "1.1.4",
+        "redux": "^4.0.0",
+        "redux-thunk": "^2.3.0",
+        "seamless-immutable": "^7.1.3",
+        "core-js": "^2.5.7",
         "react-yandex-maps": "^3.0.2"
+    },
+    "scripts": {
+        "start": "cross-env PORT=10888 react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "keywords": [],
+    "author": "a3v",
+    "license": "MIT",
+    "devDependencies": {
+        "cross-env": "^5.2.0",
+        "react-hot-loader": "^4.3.4",
+        "react-scripts": "^1.1.4"
     }
 }
